<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yzbot_stm32connect</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wshenyou@163.com">kgh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>serial</buildtool_depend> -->

  <depend>rclcpp</depend>
  <depend>yzbot_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
